--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,9 @@
 /* Empty. Add your own CSS if you like */
+
+.menuname{
+
+  margin-top: 10px;
+  vertical-align: middle;
+  margin-left: 10px;
+
+}
