--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar class="bar-stable bar-dark">
       <ion-nav-back-button>
       </ion-nav-back-button>
 
@@ -13,19 +13,25 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable">
-      <h1 class="title">Left</h1>
+    <ion-header-bar class="bar-stable bar-dark">
+      <h1 class="title">菜单</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close ng-click="login()">
-          Login
+        <ion-item class="item item-avatar-left  item-icon-right"      menu-close ng-click="login()">
+          <i class="icon ion-log-in" style="left: 18px;"></i>
+          <i class="icon ion-ios-arrow-forward"></i>
+          <div class="menuname">登录</div>
         </ion-item>
-        <ion-item menu-close href="#/app/search">
-          Search
+        <ion-item class="item item-avatar-left  item-icon-right"   menu-close href="#/app/search">
+          <i class="icon ion-person-stalker" style="left: 18px;"></i>
+          <i class="icon ion-ios-arrow-forward"></i>
+          <div class="menuname" >科室</div>
         </ion-item>
-        <ion-item menu-close href="#/app/browse">
-          Browse
+        <ion-item class="item item-avatar-left  item-icon-right" menu-close href="#/app/browse">
+          <i class="icon ion-paintbrush" style="left: 18px;"></i>
+          <i class="icon ion-ios-arrow-forward"></i>
+          <div class="menuname">签到</div>
         </ion-item>
         <ion-item menu-close href="#/app/playlists">
           Playlists
