--- a/www/css/style.css
+++ b/www/css/style.css
@@ -7,3 +7,19 @@
   margin-left: 10px;
 
 }
+.blackmenu{
+
+  border-color: #111;
+  background-color: #444444 !important;
+  /*background-image: linear-gradient(0deg, #111, #111 50%, transparent 50%);*/
+  color: #fff;
+
+}
+.blackmenu .item {
+  background-color: transparent;
+  border-color: #444444;
+  vertical-align: middle;
+  border-top: 1px solid;
+  border-bottom: 1px solid;
+  color: #F0F1F1;
+}
