--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -16,7 +16,7 @@
     <ion-header-bar class="bar-stable bar-dark">
       <h1 class="title">菜单</h1>
     </ion-header-bar>
-    <ion-content>
+    <ion-content class="blackmenu">
       <ion-list>
         <ion-item class="item item-avatar-left  item-icon-right"      menu-close ng-click="login()">
           <i class="icon ion-log-in" style="left: 18px;"></i>
@@ -33,8 +33,10 @@
           <i class="icon ion-ios-arrow-forward"></i>
           <div class="menuname">签到</div>
         </ion-item>
-        <ion-item menu-close href="#/app/playlists">
-          Playlists
+        <ion-item class="item item-avatar-left  item-icon-right" menu-close href="#/app/playlists">
+          <i class="icon ion-chatbubbles" style="left: 18px;"></i>
+          <i class="icon ion-ios-arrow-forward"></i>
+          <div class="menuname">消息</div>
         </ion-item>
       </ion-list>
     </ion-content>
