--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -18,22 +18,22 @@
     </ion-header-bar>
     <ion-content class="blackmenu">
       <ion-list>
-        <ion-item class="item item-avatar-left  item-icon-right"      menu-close ng-click="login()">
+        <ion-item menu-close  class="item item-avatar-left  item-icon-right"  ng-click="login()">
           <i class="icon ion-log-in" style="left: 18px;"></i>
           <i class="icon ion-ios-arrow-forward"></i>
           <div class="menuname">登录</div>
         </ion-item>
-        <ion-item class="item item-avatar-left  item-icon-right"   menu-close href="#/app/search">
+        <ion-item menu-close class="item item-avatar-left  item-icon-right"     href="#/app/search">
           <i class="icon ion-person-stalker" style="left: 18px;"></i>
           <i class="icon ion-ios-arrow-forward"></i>
           <div class="menuname" >科室</div>
         </ion-item>
-        <ion-item class="item item-avatar-left  item-icon-right" menu-close href="#/app/browse">
+        <ion-item menu-close class="item item-avatar-left  item-icon-right"   href="#/app/browse">
           <i class="icon ion-paintbrush" style="left: 18px;"></i>
           <i class="icon ion-ios-arrow-forward"></i>
           <div class="menuname">签到</div>
         </ion-item>
-        <ion-item class="item item-avatar-left  item-icon-right" menu-close href="#/app/playlists">
+        <ion-item menu-close class="item item-avatar-left  item-icon-right"    href="#/app/playlists">
           <i class="icon ion-chatbubbles" style="left: 18px;"></i>
           <i class="icon ion-ios-arrow-forward"></i>
           <div class="menuname">消息</div>
