--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -23,7 +23,7 @@
           <i class="icon ion-ios-arrow-forward"></i>
           <div class="menuname">登录</div>
         </ion-item>
-        <ion-item menu-close class="item item-avatar-left  item-icon-right"     href="#/app/search">
+        <ion-item menu-close class="item item-avatar-left  item-icon-right"     href="#/app/depts">
           <i class="icon ion-person-stalker" style="left: 18px;"></i>
           <i class="icon ion-ios-arrow-forward"></i>
           <div class="menuname" >科室</div>
@@ -33,7 +33,7 @@
           <i class="icon ion-ios-arrow-forward"></i>
           <div class="menuname">签到</div>
         </ion-item>
-        <ion-item menu-close class="item item-avatar-left  item-icon-right"    href="#/app/playlists">
+        <ion-item menu-close class="item item-avatar-left  item-icon-right"    href="#/app/messages">
           <i class="icon ion-chatbubbles" style="left: 18px;"></i>
           <i class="icon ion-ios-arrow-forward"></i>
           <div class="menuname">消息</div>
