--- a/www/templates/chatgroupinfo.html
+++ b/www/templates/chatgroupinfo.html
@@ -5,6 +5,10 @@
     </ion-header-bar>
 
     <ion-content class="padding" start-y="120">
+        <ion-refresher
+            pulling-text="下拉加载..."
+            on-refresh="doRefresh()">
+        </ion-refresher>
         <ol class="messages">
           <li ng-repeat="message in messages" ng-bind-html="message.realname +message.content">
 
