--- a/www/templates/depts.html
+++ b/www/templates/depts.html
@@ -1,5 +1,9 @@
 <ion-view view-title="科室">
   <ion-content>
+   <ion-refresher
+            pulling-text="下拉刷新..."
+            on-refresh="doRefresh()">
+    </ion-refresher>
     <ion-list>
       <ion-item  on-hold="show_broad_chat(dept.title);" class="item item-avatar-left  item-icon-right" ng-repeat="dept in depts" href="#/app/depts/{{dept.id}}">
 
