--- a/www/templates/chatgroupinfo.html
+++ b/www/templates/chatgroupinfo.html
@@ -21,6 +21,7 @@
     <ion-footer-bar class="bar-frosted">
         <button class="button button-clear button-icon ion-images button-positive" ng-click="addimage()"></button>
         <button class="button button-clear button-icon ion-mic-a button-positive" ng-click="addvoice()"></button>
+        <button class="button button-clear button-icon ion-videocamera button-positive" ng-click="addvideo()"></button>
         <label class="item-input-wrapper">
         <i   class="icon ion-ios-compose placeholder-icon"></i>
         <input  style="width: 100%;" type="text" ng-model="messagetext"  placeholder="...">
