--- a/www/css/style.css
+++ b/www/css/style.css
@@ -57,13 +57,25 @@
 	padding:0;
 }
 
+/**
 .messages li:nth-child(even) {
 	float:right;
 }
 
 .messages li:nth-child(even) img {
 	float:right;
+}**/
+
+.remotemessage{
+  float:right;
+
+
 }
+.remotemessage p{
+  background:#158ffe;
+	color:#fff;
+}
+
 
 .messages p {
 	border-radius:.75rem;
@@ -74,10 +86,11 @@
 	font-size:.875rem;
 }
 
+/***
 .messages li:nth-child(even) p {
 	background:#158ffe;
 	color:#fff;
-}
+}**/
 
 .messages img {
 	display:block;
