--- a/www/templates/deptpersons.html
+++ b/www/templates/deptpersons.html
@@ -5,7 +5,7 @@
 
           <i class="icon ion-chatbox-working" style="left: 18px;"></i>
           <div class="deptname">{{person.realname}}</div>
-          <i class="badge badge-assertive item-note elementCenterAlign">{{message.nums}}</i>
+          <i class="badge badge-assertive item-note elementCenterAlign">{{person.nums}}</i>
           <i class="icon ion-ios-arrow-right"></i>
 
       </ion-item>
