--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -28,6 +28,11 @@
           <i class="icon ion-ios-arrow-forward"></i>
           <div class="menuname" >科室</div>
         </ion-item>
+          <ion-item menu-close class="item item-avatar-left  item-icon-right"  ng-click="alarm()" >
+          <i class="icon ion-android-warning" style="left: 18px;"></i>
+          <i class="icon ion-ios-arrow-forward"></i>
+          <div class="menuname">一键报警</div>
+        </ion-item>
         <ion-item menu-close class="item item-avatar-left  item-icon-right"   href="#/app/browse">
           <i class="icon ion-paintbrush" style="left: 18px;"></i>
           <i class="icon ion-ios-arrow-forward"></i>
