--- a/www/templates/alarmmodal.html
+++ b/www/templates/alarmmodal.html
@@ -2,7 +2,7 @@
   <ion-header-bar class="bar-stable bar-dark">
     <h1 class="title">紧急报警</h1>
     <div class="buttons">
-      <button class="button button-clear" ng-click="closealarmmodel()">关闭</button>
+      <button class="button button-clear" ng-click="closealarmmodal()">关闭</button>
     </div>
   </ion-header-bar>
 
@@ -10,8 +10,13 @@
     <div class="scroll-content has-header  light">
 
         <button class="button button-block button-assertive">
-          {{user.deptname}}: {{user.realname}}
+          {{alarmuser.deptname}}: {{alarmuser.realname}}
         </button>
+
+        <div style="text-align:center;height: 100%; ">
+        <img class="mg-responsive" style="height: 100%; border:1px solid #ffffff;"  src="img/RedAlert.gif"/>
+
+        </div>
 
     </div>
 
