--- a/www/templates/alarmmodal.html
+++ b/www/templates/alarmmodal.html
@@ -13,8 +13,9 @@
           {{alarmuser.deptname}}: {{alarmuser.realname}}
         </button>
 
-        <div style="text-align:center;height: 100%; ">
-        <img class="mg-responsive" style="height: 100%; border:1px solid #ffffff;"  src="img/RedAlert.gif"/>
+        <div style="text-align:center;">
+
+        <img class="mg-responsive" width="100px" height="100px"  src="img/RedAlert.gif"/>
 
         </div>
 
