--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -6,7 +6,7 @@
     </div>
   </ion-header-bar>
   <ion-content>
-    <form ng-submit="signIn()">
+    <form ng-submit="signInchange()">
       <div class="list">
         <label class="item item-input">
           <span class="input-label">用户名</span>
