--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -52,6 +52,12 @@
           <i class="icon ion-ios-arrow-forward"></i>
           <div class="menuname">消息</div>
         </ion-item>
+
+        <ion-item menu-close class="item item-avatar-left  item-icon-right"    href="#/app/setting">
+          <i class="icon ion-settings" style="left: 18px;"></i>
+          <i class="icon ion-ios-arrow-forward"></i>
+          <div class="menuname">设置</div>
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
